added custom content partial for content_blocks

--- a/app/views/layouts/cms/content_library.html.erb
+++ b/app/views/layouts/cms/content_library.html.erb
@@ -78,7 +78,9 @@
                 <%= yield :functions %>
                 <br clear="all" />
               </div>
-              <div class="top_cap_content"></div>
+              <div class="top_cap_content">
+                <%= render :partial => 'layouts/cms/custom' %>
+              </div>
               <div id="content">
                 <div class="pad">
                   <%= yield %>
